@@ -26,3 +26,6 @@ r416
 
 *r429
 --Fixed torque rating on small inline 8 speed gearbox
+
+*r430
+--Buffed straight-through gearboxes. They have +25% torque capacity and -25% weight, compared to inline/transaxial versions.
